GERMAN: Updated RM 2.3 files based on EN-rev91747
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@92847 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -35,6 +35,7 @@ label.set.security=Sicherheit
 label.set.vitalRecord=Besonders relevanter Record
 label.set.disposition=Entsorgungsplan
 label.set.customMetadata=Benutzerdefinierte Eigenschaften
+label.set.recordVersion=Record-Version
 label.hold.reason=Grund
 label.hold.delete.empty=Sperrbereich l\u00f6schen, wenn leer
 label.recordLevelDisposition=Angewendet auf
@@ -54,6 +55,8 @@ label.storageLocation=Speicherort
 label.shelf=Regal
 label.file=Datei
 label.box=Box
+label.versionDescription=Versionsbeschreibung
+label.VersionLabel=Versionsbezeichnung
 
 ## Common Property Selector
 label.menu.content=Inhalt
@@ -67,7 +70,7 @@ label.menu.custom=Benutzerdefinierte Eigenschaften
 button.reject.record=Record ablehnen
 button.request-info=Informationen anfordern
 
-##\ufffdPop-up Messages
+## Pop-up Messages
 message.confirm.delete.title=Best\u00e4tigung l\u00f6schen
 message.confirm.delete=M\u00f6chten Sie ''{0}'' wirklich l\u00f6schen?
 message.confirm.destroy.title=Best\u00e4tigung vernichten
@@ -87,6 +90,8 @@ message.request-info-success=Informationen erfolgreich angefordert
 message.request-info-failure=Beim Anfordern von Informationen ist ein Fehler aufgetreten.
 message.confirm.delete-hold.title=Sperrbereich l\u00f6schen
 message.confirm.delete-hold=M\u00f6chten Sie ''{0}'' wirklich l\u00f6schen?
+
+
 
 ## Admin Console
 message.admin-console-access-denied=Sie ben\u00f6tigen zus\u00e4tzliche Berechtigungen, um auf diese Seite zuzugreifen.
@@ -139,6 +144,8 @@ actions.delete.hold=Sperrbereich l\u00f6schen
 actions.add-to-hold=Zum Sperrbereich hinzuf\u00fcgen
 actions.remove-from-hold=Vom Sperrbereich entfernen
 actions.file-hold-report=Sperrbericht generieren
+
+actions.recorded-version-config=Optionen f\u00fcr automatische Deklaration
 
 ## File Plan Action Outcomes
 message.multi-select={0} ausgew\u00e4hlte Elemente
@@ -204,6 +211,10 @@ message.file-hold-report.success=Sperrbericht generiert
 message.delete-hold.failure=Sperrbereich konnte nicht gel\u00f6scht werden
 message.delete-hold.success=Sperrbereich gel\u00f6scht
 
+
+message.recordedVersionConfig.success=Optionen f\u00fcr automatische Deklaration erfolgreich eingerichtet
+message.recordedVersionConfig.failure=Optionen f\u00fcr automatische Deklaration konnten nicht eingerichtet werden
+
 ## File Plan Status Indicators
 status.rm-accession=Aufnahme ausstehend
 status.rm-accessioned=Aufnahme durchgef\u00fchrt
@@ -226,6 +237,10 @@ status.rm-scanned-record=Eingescannter Record
 status.rm-web-record=Web-Record
 status.rm-is-record=Record
 status.rules=Diesem Ordner sind Regeln zugeordnet
+status.rm-version-record=Versions-Record
+
+
+
 # Exif
 status.exif=EXIF-Metadaten verf\u00fcgbar
 
@@ -350,8 +365,11 @@ details.record.date-filed=Ablagedatum
 details.record.publication-date=Ver\u00f6ffentlichungsdatum
 details.record.originator=Ersteller
 details.record.originating-organization=Erstellende Organisation
+details.version.label=Version
 # Incomplete Record
 details.undeclared-record.info=Nicht abgeschlossener Record
+# Rejected Record
+details.rejected-record.info=Abgelehnter Record
 # Transfer Container
 details.transfer-container.title={0} \u00fcbertragen
 details.transfer-container.is-accession=<em>Hinweis:</em> \u00dcbertragungstyp ist 'Aufnahme'.
@@ -375,12 +393,6 @@ tip.insitu-tag=Tag
 
 ## Help panels, including Drag and Drop
 show.folders={0} Unterordner anzeigen
-
-details.undeclared-record.info=Nicht abgeschlossener Record
-details.rejected-record.info=Abgelehnter Record
-details.record.identifier=Eindeutige Record-ID
-details.record.originator=Ersteller
-details.record.originating-organization=Erstellende Organisation
 
 ## Create site dialog
 description.recordsManagementSite=Records Management Site
