FRENCH: Updated RM 2.3 files based on EN-rev92992
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@92994 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -35,6 +35,7 @@ label.set.security=S\u00e9curit\u00e9
 label.set.vitalRecord=Document d'archives essentiel
 label.set.disposition=R\u00e8gle de conservation
 label.set.customMetadata=Propri\u00e9t\u00e9s personnalis\u00e9es
+label.set.recordVersion=Version du document d'archive
 label.hold.reason=Motif
 label.hold.delete.empty=Supprimer la suspension lorsque vide
 label.recordLevelDisposition=Appliqu\u00e9 \u00e0
@@ -51,9 +52,11 @@ label.dispositionAsOfDate=Date de d\u00e9but de disposition
 label.physicalSize=Taille physique
 label.numberOfCopies=Nombre de copies
 label.storageLocation=Emplacement de stockage
-label.shelf=\u00c9tag\u00e8re
+label.shelf=Etag\u00e8re
 label.file=Fichier
 label.box=Bo\u00eete
+label.versionDescription=Description de la version
+label.VersionLabel=Libell\u00e9 de la version
 
 ## Common Property Selector
 label.menu.content=Contenu
@@ -67,9 +70,9 @@ label.menu.custom=Propri\u00e9t\u00e9s personnalis\u00e9es
 button.reject.record=Rejeter le document d'archives
 button.request-info=Demander des informations
 
-##\ufffdPop-up Messages
+##?Pop-up Messages
 message.confirm.delete.title=Confirmation de la suppression
-message.confirm.delete=Voulez-vous vraiment supprimer ''{0}''\u00a0?
+message.confirm.delete=Voulez-vous vraiment supprimer ''{0}'' ?
 message.confirm.destroy.title=Confirmation de la destruction
 message.confirm.destroy=Voulez-vous vraiment d\u00e9truire ''{0}'' ?
 message.confirm.destroyMultiple=Voulez-vous vraiment d\u00e9truire les {0} fichiers s\u00e9lectionn\u00e9s ?
@@ -87,6 +90,10 @@ message.request-info-success=La demande d'informations a bien \u00e9t\u00e9 effe
 message.request-info-failure=Erreur lors de la demande d'informations
 message.confirm.delete-hold.title=Supprimer la suspension
 message.confirm.delete-hold=Voulez-vous vraiment supprimer ''{0}''\u00a0?
+message.confirm.close-rejected-record.title=Confirmer
+message.confirm.close-rejected-record=Voulez-vous vraiment supprimer l'avertissement associ\u00e9 au rejet du document d'archives\u00a0?
+message.confirm.unlink.title=Confirmation de suppression de lien
+message.confirm.unlink.text=Voulez-vous vraiment supprimer le lien du document d'archives\u00a0?
 
 ## Admin Console
 message.admin-console-access-denied=Vous devez disposer de permissions suppl\u00e9mentaires pour pouvoir acc\u00e9der \u00e0 cette page.
@@ -112,6 +119,7 @@ actions.edit-reason=Modifier les informations sur la suspension
 actions.edit-review-as-of-date=Modifier la date de r\u00e9vision
 actions.file-report=Archiver le rapport
 actions.link-to=Lier \u00e0...
+actions.unlink-from=Supprimer le lien du document d'archives
 actions.file-to=Archiver dans...
 actions.manage-permissions=G\u00e9rer les permissions
 actions.move-to=D\u00e9placer vers...
@@ -129,6 +137,7 @@ actions.upload-new-version=T\u00e9l\u00e9charger la nouvelle version
 actions.view-details=Afficher les d\u00e9tails
 actions.view-audit-log=Afficher le journal d'audit
 actions.create-record=D\u00e9clarer comme document d'archives
+actions.declare-as-version-record=D\u00e9clarer comme document d'archive versionn\u00e9
 actions.hide-record=Masquer le document d'archives
 actions.reject=Rejeter
 actions.request-info=Demander des informations
@@ -139,6 +148,9 @@ actions.delete.hold=Supprimer la suspension
 actions.add-to-hold=Ajouter \u00e0 la suspension
 actions.remove-from-hold=Supprimer de la suspension
 actions.file-hold-report=G\u00e9n\u00e9rer un rapport de suspension
+actions.move-dm-record=D\u00e9placer le document d'archives
+actions.recorded-version-config=Options de d\u00e9claration automatique
+actions.add-relationship=Ajouter une relation
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u00e9l\u00e9ments s\u00e9lectionn\u00e9s
@@ -187,8 +199,8 @@ message.create-disposition-schedule.failure=Impossible de cr\u00e9er la r\u00e8g
 message.create-disposition-schedule.success=La r\u00e8gle de conservation a \u00e9t\u00e9 cr\u00e9\u00e9e pour ''{0}''
 message.create-record.success=Bien d\u00e9clar\u00e9 comme document d'archives
 message.create-record.failure=Impossible de d\u00e9clarer comme document d'archives
-message.hide-record.success=Document d'archives masqu\u00e9
-message.hide-record.failure=Impossible de masquer le document d'archives
+message.hide-record.success=Le document d''archives ''{0}'' a bien \u00e9t\u00e9 masqu\u00e9
+message.hide-record.failure=Impossible de masquer le document d''archives ''{0}''
 message.reject.reason=Motif :
 message.reject.title=Motif du rejet
 message.reject.failure=Impossible de rejeter ''{0}''
@@ -203,6 +215,12 @@ message.file-hold-report.failure=Impossible de g\u00e9rer le rapport de suspensi
 message.file-hold-report.success=Rapport de suspension g\u00e9n\u00e9r\u00e9
 message.delete-hold.failure=Impossible de supprimer la suspension
 message.delete-hold.success=Suspension supprim\u00e9e
+message.moveDmRecord.failure=Impossible de d\u00e9placer le document d''archives ''{0}''
+message.moveDmRecord.success=Le document d''archives ''{0}'' a bien \u00e9t\u00e9 d\u00e9plac\u00e9
+message.recordedVersionConfig.success=Les options de d\u00e9claration automatique ont bien \u00e9t\u00e9 d\u00e9finies
+message.recordedVersionConfig.failure=Impossible de d\u00e9finir les options de d\u00e9claration automatique
+message.unlink.success=Le lien du document d'archives a bien \u00e9t\u00e9 supprim\u00e9
+message.unlink.failure=Impossible de supprimer le lien du document d'archives
 
 ## File Plan Status Indicators
 status.rm-accession=Versement \u00e0 un autre organisme en attente
@@ -226,6 +244,10 @@ status.rm-scanned-record=Document d'archives num\u00e9ris\u00e9
 status.rm-web-record=Document d'archives Web
 status.rm-is-record=Document d'archives
 status.rules=Des r\u00e8gles sont appliqu\u00e9es au dossier
+status.rm-version-record=Document d'archive versionn\u00e9
+## Document Library Status Indicators
+status.rm-recorded-version-history-all-revisions=Toutes les r\u00e9visions seront enregistr\u00e9es
+status.rm-recorded-version-history-major-revisions=Seules les r\u00e9visions majeures seront enregistr\u00e9es
 # Exif
 status.exif=M\u00e9tadonn\u00e9es EXIF disponibles
 
@@ -235,7 +257,7 @@ label.keywords=Mots cl\u00e9s (texte et nom)
 label.identifier=Identifiant
 label.dateFiled=Date de versement au site des archives
 label.publicationDate=Date de publication
-label.originator=\u00c9metteur
+label.originator=Emetteur
 label.originatingOrganization=Organisation \u00e9mettrice
 label.mediaType=Type de support
 label.format=Format
@@ -295,7 +317,7 @@ tool.rm-list-of-values.label=Liste de valeurs
 tool.rm-list-of-values.description=Liste de d\u00e9finitions de valeurs
 tool.rm-references.label=Relations
 tool.rm-references.description=D\u00e9finitions de relations
-tool.rm-events.label=\u00c9v\u00e9nements
+tool.rm-events.label=Ev\u00e9nements
 tool.rm-events.description=D\u00e9finitions d'\u00e9v\u00e9nements
 tool.rm-audit.label=Audit
 tool.rm-audit.description=Audit de gestion des archives
@@ -317,7 +339,7 @@ button.view.detailed=Vue d\u00e9taill\u00e9e
 ## Drop-down Menus
 menu.select=S\u00e9lectionner
 menu.select.all=Tout
-menu.select.none=Aucun
+menu.select.none=Aucune
 menu.select.invert=Inverser la s\u00e9lection
 menu.select.folders=Dossiers
 menu.select.documents=Documents
@@ -348,10 +370,13 @@ details.folder.vital-record-indicator=Identifiant de document d'archives essenti
 details.record.identifier=Identifiant unique de document d'archives
 details.record.date-filed=Date de versement au site des archives
 details.record.publication-date=Date de publication
-details.record.originator=\u00c9metteur
+details.record.originator=Emetteur
 details.record.originating-organization=Organisation \u00e9mettrice
+details.version.label=Version
 # Incomplete Record
 details.undeclared-record.info=Document d'archives incomplet
+# Rejected Record
+details.rejected-record.info=Document d'archives rejet\u00e9
 # Transfer Container
 details.transfer-container.title=Transf\u00e9rer {0}
 details.transfer-container.is-accession=<em>Remarque :</em> Le type de transfert est Versement \u00e0 un autre organisme
@@ -375,12 +400,6 @@ tip.insitu-tag=Balise
 
 ## Help panels, including Drag and Drop
 show.folders=Afficher {0} sous-dossier(s)
-
-details.undeclared-record.info=Document d'archives incomplet
-details.rejected-record.info=Document d'archives rejet\u00e9
-details.record.identifier=Identifiant unique de document d'archives
-details.record.originator=\u00c9metteur
-details.record.originating-organization=Organisation \u00e9mettrice
 
 ## Create site dialog
 description.recordsManagementSite=Site de gestion des archives
@@ -453,4 +472,8 @@ file-to.substitution.date.month.number.label=Num\u00e9ro du mois (p.ex., 01)
 file-to.substitution.date.year.short.label=Ann\u00e9e en abr\u00e9g\u00e9 (p.ex., 14)
 file-to.substitution.date.year.label=Ann\u00e9e (p.ex., 14)
 file-to.substitution.date.year.long.label=Ann\u00e9e en long (p.ex., 2014)
-file-to.substitution.date.year.week.label=Num\u00e9ro de semaine (p.ex., 31)
+file-to.substitution.date.year.week.label=Semaine de l'ann\u00e9e (p.ex., 31)
+
+## Banner icon messages
+banner.rejected-record.info=Voir les informations sur le document d'archives rejet\u00e9
+banner.rejected-record.close=Supprimer l'enregistrement d'avertissement rejet\u00e9
