--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_fr.properties
@@ -20,9 +20,11 @@ message.create-failure=Impossible d''ajouter la nouvelle m\u00e9tadonn\u00e9e pe
 message.edit-success=La m\u00e9tadonn\u00e9e personnalis\u00e9e a bien \u00e9t\u00e9 enregistr\u00e9e.
 message.edit-failure=Impossible d''enregistrer la m\u00e9tadonn\u00e9e personnalis\u00e9e\u00a0: {0}
 message.delete.title=Supprimer la m\u00e9tadonn\u00e9e personnalis\u00e9e
-message.delete.text=Etes-vous s\u00fbr de vouloir supprimer : {0} ?
+message.delete.text=Voulez-vous vraiment supprimer\u00a0: {0}\u00a0?
 message.delete-success=La m\u00e9tadonn\u00e9e personnalis\u00e9e a bien \u00e9t\u00e9 supprim\u00e9e.
-message.delete-failure=Impossible de supprimer la m\u00e9tadonn\u00e9e personnalis\u00e9e\u00a0: {0}.
+message.delete-failure=Impossible de supprimer la m\u00e9tadonn\u00e9e personnalis\u00e9e\u00a0: {0}
 
 mandatory.true=True
 mandatory.false=False
+
+button.new.custom-metadata=Nouveau
