--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_fr.properties
@@ -1,11 +1,7 @@
 label.list.no.data.message=Aucune relation d\u00e9finie
 label.toolbar.relationships=Relations
 label.button.new-relationship=Ajouter une nouvelle relation
-label.title.new-relationship=Nouvelle relation
-label.button.select-record=S\u00e9lectionner un document d'archive
-label.button.create=Cr\u00e9er
-label.button.cancel=Annuler
-label.alt.text.delete-relationship=Supprimer ''{0}''
 label.confirmation.title.delete-relationship=Supprimer la relation
-label.confirmationPrompt.delete-relationship=\u00cates-vous s\u00fbr de vouloir supprimer ''{node.properties.cm:name}''\u00a0?
-label.delete-relationship.successMessage=''{node.properties.cm:name}'' a bien \u00e9t\u00e9 supprim\u00e9
+label.confirmationPrompt.delete-relationship=Voulez-vous vraiment supprimer ''{node.properties.cm:name}''\u00a0?
+label.delete-relationship=Supprimer la relation
+label.delete-relationship.successMessage=La relation ''{node.properties.cm:name}'' a bien \u00e9t\u00e9 supprim\u00e9e
