--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_fr.properties
@@ -1,4 +1,4 @@
-header=D\u00e9finir les options de d\u00e9claration automatique des versions
+header=D\u00e9finir les options de d\u00e9claration automatique
 label.recorded-versions=D\u00e9clarer automatiquement les versions comme documents d'archives
 option.none.displayValue=Jamais
 option.major_only.displayValue=Uniquement les versions majeures
