JAPANESE: Updated RM 2.3 files based on EN-rev92992
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@92997 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_ja.properties
@@ -1,11 +1,7 @@
 label.list.no.data.message=\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u95a2\u4fc2\u306f\u3042\u308a\u307e\u305b\u3093
 label.toolbar.relationships=\u95a2\u4fc2
 label.button.new-relationship=\u65b0\u3057\u3044\u95a2\u4fc2\u306e\u8ffd\u52a0
-label.title.new-relationship=\u65b0\u3057\u3044\u95a2\u4fc2
-label.button.select-record=\u30ec\u30b3\u30fc\u30c9\u306e\u9078\u629e
-label.button.create=\u4f5c\u6210
-label.button.cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
-label.alt.text.delete-relationship=''{0}'' \u3092\u524a\u9664\u3057\u307e\u3059
 label.confirmation.title.delete-relationship=\u95a2\u4fc2\u306e\u524a\u9664
 label.confirmationPrompt.delete-relationship=''{node.properties.cm:name}'' \u3092\u524a\u9664\u3057\u307e\u3059\u304b?
-label.delete-relationship.successMessage=''{node.properties.cm:name}'' \u3092\u524a\u9664\u3057\u307e\u3057\u305f
+label.delete-relationship=\u95a2\u4fc2\u306e\u524a\u9664
+label.delete-relationship.successMessage=''{node.properties.cm:name}'' \u304c\u6b63\u5e38\u306b\u524a\u9664\u3055\u308c\u307e\u3057\u305f
