GERMAN: Updated RM 2.3 files based on EN-rev92992
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93137 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -53,7 +53,7 @@ label.physicalSize=Physikalische Gr\u00f6\u00dfe
 label.numberOfCopies=Anzahl der Kopien
 label.storageLocation=Speicherort
 label.shelf=Regal
-label.file=Datei
+label.file=Ablegen
 label.box=Box
 label.versionDescription=Versionsbeschreibung
 label.VersionLabel=Versionsbezeichnung
@@ -70,7 +70,7 @@ label.menu.custom=Benutzerdefinierte Eigenschaften
 button.reject.record=Record ablehnen
 button.request-info=Informationen anfordern
 
-## Pop-up Messages
+##?Pop-up Messages
 message.confirm.delete.title=Best\u00e4tigung l\u00f6schen
 message.confirm.delete=M\u00f6chten Sie ''{0}'' wirklich l\u00f6schen?
 message.confirm.destroy.title=Best\u00e4tigung vernichten
@@ -90,8 +90,10 @@ message.request-info-success=Informationen erfolgreich angefordert
 message.request-info-failure=Beim Anfordern von Informationen ist ein Fehler aufgetreten.
 message.confirm.delete-hold.title=Sperrbereich l\u00f6schen
 message.confirm.delete-hold=M\u00f6chten Sie ''{0}'' wirklich l\u00f6schen?
-
-
+message.confirm.close-rejected-record.title=Best\u00e4tigen
+message.confirm.close-rejected-record=M\u00f6chten Sie die Warnung f\u00fcr den abgelehnten Record wirklich l\u00f6schen?
+message.confirm.unlink.title=Aufheben der Verkn\u00fcpfung best\u00e4tigen
+message.confirm.unlink.text=M\u00f6chten Sie die Verkn\u00fcpfung zum Record wirklich aufheben?
 
 ## Admin Console
 message.admin-console-access-denied=Sie ben\u00f6tigen zus\u00e4tzliche Berechtigungen, um auf diese Seite zuzugreifen.
@@ -117,6 +119,7 @@ actions.edit-reason=Sperrdetails bearbeiten
 actions.edit-review-as-of-date=\u00dcberpr\u00fcfungsdatum bearbeiten
 actions.file-report=Bericht ablegen
 actions.link-to=Link zu...
+actions.unlink-from=Verkn\u00fcpfung zu Records aufheben
 actions.file-to=Ablegen unter...
 actions.manage-permissions=Berechtigungen verwalten
 actions.move-to=Verschieben nach...
@@ -134,6 +137,7 @@ actions.upload-new-version=Neue Version hochladen
 actions.view-details=Details anzeigen
 actions.view-audit-log=Audit-Protokoll anzeigen
 actions.create-record=Als Record deklarieren
+actions.declare-as-version-record=Als Versions-Record deklarieren
 actions.hide-record=Record ausblenden
 actions.reject=Ablehnen
 actions.request-info=Informationen anfordern
@@ -144,8 +148,9 @@ actions.delete.hold=Sperrbereich l\u00f6schen
 actions.add-to-hold=Zum Sperrbereich hinzuf\u00fcgen
 actions.remove-from-hold=Vom Sperrbereich entfernen
 actions.file-hold-report=Sperrbericht generieren
-
+actions.move-dm-record=Record verschieben
 actions.recorded-version-config=Optionen f\u00fcr automatische Deklaration
+actions.add-relationship=Beziehung hinzuf\u00fcgen
 
 ## File Plan Action Outcomes
 message.multi-select={0} ausgew\u00e4hlte Elemente
@@ -194,8 +199,8 @@ message.create-disposition-schedule.failure=Entsorgungsplan f\u00fcr ''{0}'' kon
 message.create-disposition-schedule.success=Entsorgungsplan f\u00fcr ''{0}'' erstellt.
 message.create-record.success=Erfolgreich als Record deklariert.
 message.create-record.failure=Deklarieren als Record nicht m\u00f6glich.
-message.hide-record.success=Record ausgeblendet.
-message.hide-record.failure=Record konnte nicht ausgeblendet werden.
+message.hide-record.success=Record ''{0}'' erfolgreich ausgeblendet
+message.hide-record.failure=Record ''{0}'' konnte nicht ausgeblendet werden
 message.reject.reason=Grund:
 message.reject.title=Grund f\u00fcr Ablehnung
 message.reject.failure=''{0}'' konnte nicht abgelehnt werden.
@@ -210,17 +215,19 @@ message.file-hold-report.failure=Sperrbericht konnte nicht generiert werden.
 message.file-hold-report.success=Sperrbericht generiert
 message.delete-hold.failure=Sperrbereich konnte nicht gel\u00f6scht werden
 message.delete-hold.success=Sperrbereich gel\u00f6scht
-
-
+message.moveDmRecord.failure=Record ''{0}'' konnte nicht verschoben werden
+message.moveDmRecord.success=Record ''{0}'' erfolgreich verschoben
 message.recordedVersionConfig.success=Optionen f\u00fcr automatische Deklaration erfolgreich eingerichtet
 message.recordedVersionConfig.failure=Optionen f\u00fcr automatische Deklaration konnten nicht eingerichtet werden
+message.unlink.success=Verkn\u00fcpfung zu Record erfolgreich aufgehoben
+message.unlink.failure=Verkn\u00fcpfung zu Record konnte nicht aufgehoben werden
 
 ## File Plan Status Indicators
 status.rm-accession=Aufnahme ausstehend
 status.rm-accessioned=Aufnahme durchgef\u00fchrt
 status.rm-closed=Geschlossen
-status.rm-cutoff=Getrennt
-status.rm-cutoff-folder=Getrennt
+status.rm-cutoff=Trennen
+status.rm-cutoff-folder=Trennen
 status.rm-destroyed=Vernichtet
 status.rm-frozen=Gesperrt
 status.rm-multi-parent=Verkn\u00fcpft in mehreren Record-Ordnern
@@ -238,9 +245,9 @@ status.rm-web-record=Web-Record
 status.rm-is-record=Record
 status.rules=Diesem Ordner sind Regeln zugeordnet
 status.rm-version-record=Versions-Record
-
-
-
+## Document Library Status Indicators
+status.rm-recorded-version-history-all-revisions=Alle Revisionen werden als Record deklariert
+status.rm-recorded-version-history-major-revisions=Nur Hauptrevisionen werden als Record deklariert
 # Exif
 status.exif=EXIF-Metadaten verf\u00fcgbar
 
@@ -466,3 +473,7 @@ file-to.substitution.date.year.short.label=Jahr kurz (z. B. 14)
 file-to.substitution.date.year.label=Jahr (z. B. 14)
 file-to.substitution.date.year.long.label=Jahr lang (z. B. 2014)
 file-to.substitution.date.year.week.label=Woche des Jahres (z. B. 31)
+
+## Banner icon messages
+banner.rejected-record.info=Angaben zu abgelehntem Record anzeigen
+banner.rejected-record.close=Warnhinweis f\u00fcr abgelehnen Record entfernen
