--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_de.properties
@@ -14,7 +14,7 @@ label.asOf=Startdatum
 label.noDispositionSchedule=Entsorgungszyklus nicht vorhanden.
 label.noEventsInDispositionSchedule=F\u00fcr Schritt ''{0}'' sind keine Ereignisse vorhanden.
 label.completeDispositionSchedule=Entsorgungszyklus abgeschlossen.
-label.dispositionScheduleAppliedToFolder=Entsorgungsplan auf Elternordner des Record angewendet, mit Startdatum{0}.
+label.dispositionScheduleAppliedToFolder=Entsorgungsplan auf Elternordner des Record angewendet, mit Startdatum: {0}.
 label.linkToFoldersDispositionSchedule=Ereignisse von Elternordner anzeigen
 label.loadFailure=Ereignisse konnten nicht geladen werden.
 button.completeEvent=Ereignis abschlie\u00dfen
