--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_de.properties
@@ -1,4 +1,4 @@
-header=Optionen f\u00fcr automatische Deklaration von Records
+header=Optionen f\u00fcr automatische Deklaration
 label.recorded-versions=Versionen automatisch als Record deklarieren
 option.none.displayValue=Nie
 option.major_only.displayValue=Nur f\u00fcr Hauptversionen
