SPANISH: Updated RM 2.3 files based on EN-rev92992
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93139 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -35,6 +35,7 @@ label.set.security=Seguridad
 label.set.vitalRecord=Documento de archivo vital
 label.set.disposition=Planificaci\u00f3n de disposici\u00f3n
 label.set.customMetadata=Propiedades personalizadas
+label.set.recordVersion=Versi\u00f3n del documento de archivo
 label.hold.reason=Raz\u00f3n
 label.hold.delete.empty=Eliminar bloqueo al vaciar
 label.recordLevelDisposition=Aplicado a
@@ -54,6 +55,8 @@ label.storageLocation=Ubicaci\u00f3n de almacenamiento
 label.shelf=Estanter\u00eda
 label.file=Fichero
 label.box=Caja
+label.versionDescription=Descripci\u00f3n de la versi\u00f3n
+label.VersionLabel=Etiqueta de la versi\u00f3n
 
 ## Common Property Selector
 label.menu.content=Contenido
@@ -67,7 +70,7 @@ label.menu.custom=Propiedades personalizadas
 button.reject.record=Rechazar documento de archivo
 button.request-info=Solicitar informaci\u00f3n
 
-##Pop-up Messages
+##?Pop-up Messages
 message.confirm.delete.title=Eliminar confirmaci\u00f3n
 message.confirm.delete=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
 message.confirm.destroy.title=Confirmaci\u00f3n de destrucci\u00f3n
@@ -87,6 +90,10 @@ message.request-info-success=Informaci\u00f3n solicitada correctamente
 message.request-info-failure=Se ha producido un error al solicitar informaci\u00f3n
 message.confirm.delete-hold.title=Eliminar bloqueo
 message.confirm.delete-hold=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
+message.confirm.close-rejected-record.title=Confirmar
+message.confirm.close-rejected-record=\u00bfEst\u00e1 seguro de que desea eliminar el aviso de documento de archivo de rechazado?
+message.confirm.unlink.title=Desvincular confirmaci\u00f3n
+message.confirm.unlink.text=\u00bfEst\u00e1 seguro de que desea desvincular el documento de archivo?
 
 ## Admin Console
 message.admin-console-access-denied=Necesita permisos adicionales para acceder a esta p\u00e1gina.
@@ -112,6 +119,7 @@ actions.edit-reason=Editar detalles de bloqueo
 actions.edit-review-as-of-date=Editar fecha de revisi\u00f3n
 actions.file-report=Archivar informe
 actions.link-to=Enlazar a...
+actions.unlink-from=Desvincular documento de archivo
 actions.file-to=Archivar en...
 actions.manage-permissions=Administrar permisos
 actions.move-to=Mover a...
@@ -129,6 +137,7 @@ actions.upload-new-version=Subir nueva versi\u00f3n
 actions.view-details=Ver detalles
 actions.view-audit-log=Ver registro de auditor\u00edas
 actions.create-record=Declarar como documento de archivo
+actions.declare-as-version-record=Declarar como documento de archivo versionado
 actions.hide-record=Ocultar documento de archivo
 actions.reject=Rechazar
 actions.request-info=Solicitar informaci\u00f3n
@@ -139,9 +148,12 @@ actions.delete.hold=Eliminar bloqueo
 actions.add-to-hold=A\u00f1adir a bloqueo
 actions.remove-from-hold=Eliminar de bloqueo
 actions.file-hold-report=Generar informe de bloqueo
+actions.move-dm-record=Mover documento de archivo
+actions.recorded-version-config=Opciones de declaraci\u00f3n autom\u00e1tica
+actions.add-relationship=A\u00f1adir relaci\u00f3n
 
 ## File Plan Action Outcomes
-message.multi-select=''{0}'' elementos seleccionados
+message.multi-select={0} elementos seleccionados
 message.accession.failure=No se pudo adherir ''{0}''
 message.accession.success=''{0}'' adherido correctamente
 message.accession-complete.failure=No se pudo completar la adhesi\u00f3n ''{0}''
@@ -187,8 +199,8 @@ message.create-disposition-schedule.failure=No se pudo crear la planificaci\u00f
 message.create-disposition-schedule.success=Se ha creado la planificaci\u00f3n de disposici\u00f3n de ''{0}''
 message.create-record.success=Declarado correctamente como documento de archivo
 message.create-record.failure=No se pudo declarar como documento de archivo
-message.hide-record.success=Documento de archivo oculto
-message.hide-record.failure=No se pudo ocultar el documento de archivo
+message.hide-record.success=Documento de archivo ''{0}'' ocultado correctamente
+message.hide-record.failure=No se ha podido ocultar el documento de archivo ''{0}''
 message.reject.reason=Raz\u00f3n:
 message.reject.title=Raz\u00f3n del rechazo
 message.reject.failure=No se pudo rechazar ''{0}''
@@ -201,8 +213,14 @@ message.file-success=Informe archivado correctamente como ''{0}''
 message.file-failure=No se pudo completar la operaci\u00f3n de archivado
 message.file-hold-report.failure=No se pudo generar el informe de destrucci\u00f3n
 message.file-hold-report.success=Informe de bloqueo generado
-message.delete-hold.failure=No se pudo eliminar el bloqueo
+message.delete-hold.failure=No se puede eliminar el bloqueo
 message.delete-hold.success=Bloqueo eliminado
+message.moveDmRecord.failure=No se ha podido mover el documento de archivo ''{0}''
+message.moveDmRecord.success=Documento de archivo ''{0}'' movido correctamente
+message.recordedVersionConfig.success=Opciones de declaraci\u00f3n autom\u00e1tica configuradas correctamente
+message.recordedVersionConfig.failure=No se han podido configurar las opciones de declaraci\u00f3n autom\u00e1tica
+message.unlink.success=Documento de archivo desvinculado correctamente
+message.unlink.failure=No se ha podido desvincular el documento de archivo
 
 ## File Plan Status Indicators
 status.rm-accession=Adhesi\u00f3n pendiente
@@ -226,6 +244,10 @@ status.rm-scanned-record=Documento de archivo escaneado
 status.rm-web-record=Documento de archivo web
 status.rm-is-record=Documento de archivo
 status.rules=Carpetas con reglas aplicadas
+status.rm-version-record=Documento de archivo versionado
+## Document Library Status Indicators
+status.rm-recorded-version-history-all-revisions=Todas las revisiones se guardar\u00e1n como documento de archivo
+status.rm-recorded-version-history-major-revisions=Solo las revisiones importantes se guardar\u00e1n como documento de archivo
 # Exif
 status.exif=Metadatos EXIF disponibles
 
@@ -328,9 +350,9 @@ menu.select.recordCategories=Categor\u00edas de documentos de archivo
 
 ## Metadata Fields
 # Generic
-details.created.on=Creado
+details.created.on=Creado en
 details.created.by=Creado por
-details.modified.on=Modificado
+details.modified.on=Modificado el
 details.modified.by=Modificado por
 details.by=Por
 details.size=Tama\u00f1o
@@ -350,13 +372,16 @@ details.record.date-filed=Fecha de archivado
 details.record.publication-date=Fecha de publicaci\u00f3n
 details.record.originator=Creador
 details.record.originating-organization=Organizaci\u00f3n creadora
+details.version.label=Versi\u00f3n
 # Incomplete Record
 details.undeclared-record.info=Documento de archivo incompleto
+# Rejected Record
+details.rejected-record.info=Documento de archivo de rechazado
 # Transfer Container
-details.transfer-container.title=Transferir ''{0}''
+details.transfer-container.title=Transferir {0}
 details.transfer-container.is-accession=<em>Nota:</em> el tipo de transferencia es adhesi\u00f3n
 # Hold Container
-details.hold.title=Bloqueo creado en ''{0}''
+details.hold.title=Bloqueo creado en {0}
 details.hold.title.date-format=dd mmmm yyyy 'a las' HH:MM:ss
 details.hold.reason=Raz\u00f3n de bloqueo
 details.hold.reason.none=No disponible
@@ -364,7 +389,7 @@ details.hold.reason.none=No disponible
 details.unfiled-record-folder.identifier=Identificador de archivo
 
 ## File Upload (upload new version)
-label.filter-description=Mismo tipo que ''{0}''
+label.filter-description=Mismo tipo que {0}
 
 ## Empty List
 no.items.title=No hay elementos
@@ -374,13 +399,7 @@ tip.insitu-rename=Cambiar nombre
 tip.insitu-tag=Etiqueta
 
 ## Help panels, including Drag and Drop
-show.folders=Mostrar subcarpeta(s) ''{0}''
-
-details.undeclared-record.info=Documento de archivo incompleto
-details.rejected-record.info=Documento de archivo de rechazado
-details.record.identifier=Identificador \u00fanico de documento de archivo
-details.record.originator=Creador
-details.record.originating-organization=Organizaci\u00f3n creadora
+show.folders=Mostrar subcarpeta(s) {0}
 
 ## Create site dialog
 description.recordsManagementSite=Sitio de gesti\u00f3n de documentos de archivo
@@ -454,3 +473,7 @@ file-to.substitution.date.year.short.label=A\u00f1o abreviado (por ejemplo, 14)
 file-to.substitution.date.year.label=A\u00f1o (por ejemplo, 14)
 file-to.substitution.date.year.long.label=A\u00f1o completo (por ejemplo, 2014)
 file-to.substitution.date.year.week.label=Semana del a\u00f1o (por ejemplo, 31)
+
+## Banner icon messages
+banner.rejected-record.info=Ver informaci\u00f3n sobre el documento de archivo rechazado
+banner.rejected-record.close=Eliminar el aviso de documento de archivo de rechazado
