--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_es.properties
@@ -16,13 +16,15 @@ label.datatype.date=Fecha
 message.getpropertiesfail=No se pudieron recuperar las definiciones de la propiedad personalizada.
 message.noproperties=No hay propiedades personalizadas definidas.
 message.create-success=Nueva propiedad personalizada a\u00f1adida correctamente.
-message.create-failure=No se puedo a\u00f1adir nueva propiedad personalizada: ''{0}''
+message.create-failure=No se pudo a\u00f1adir nueva propiedad personalizada: {0}
 message.edit-success=Propiedad personalizada guardada correctamente.
-message.edit-failure=No se pudo guardar la propiedad personalizada: ''{0}''
+message.edit-failure=No se pudo guardar la propiedad personalizada: {0}
 message.delete.title=Eliminar propiedad personalizada
-message.delete.text=\u00bfEst\u00e1 seguro de que desea eliminar: ''{0}''?
+message.delete.text=\u00bfEst\u00e1 seguro de que desea eliminar: {0}?
 message.delete-success=Propiedad personalizada eliminada correctamente.
-message.delete-failure=No se pudo eliminar la propiedad personalizada: ''{0}''
+message.delete-failure=No se pudo eliminar la propiedad personalizada: {0}
 
 mandatory.true=Verdadero
 mandatory.false=Falso
+
+button.new.custom-metadata=Nuevo
