--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_es.properties
@@ -14,7 +14,7 @@ label.asOf=Fecha de inicio
 label.noDispositionSchedule=No existe ciclo de vida de disposici\u00f3n
 label.noEventsInDispositionSchedule=No hay eventos para el paso ''{0}''.
 label.completeDispositionSchedule=Ciclo de vida de disposici\u00f3n completado.
-label.dispositionScheduleAppliedToFolder=Planificaci\u00f3n de disposici\u00f3n aplicado a la carpeta de documentos de archivo padre, con fecha de inicio: ''{0}''.
+label.dispositionScheduleAppliedToFolder=Planificaci\u00f3n de disposici\u00f3n aplicado a la carpeta de documentos de archivo padre, con fecha de inicio: {0}.
 label.linkToFoldersDispositionSchedule=Ver eventos de carpeta padre
 label.loadFailure=No se pudieron cargar los eventos
 button.completeEvent=Completar evento
