--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_es.properties
@@ -1,4 +1,4 @@
-header=Configurar las opciones de versiones de declaraci\u00f3n autom\u00e1tica
+header=Configurar las opciones de declaraci\u00f3n autom\u00e1tica
 label.recorded-versions=Declarar autom\u00e1ticamente versiones como documentos de archivo
 option.none.displayValue=Nunca
 option.major_only.displayValue=Solo para versiones mayores
